--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+    <title>Sunsoft</title>
+  </head>
+  <body>
   <h1>Welcome to Sunsoft Technologies</h1>
   <hr>
   <h3>A Corportae Training company</h3>
@@ -6,4 +10,5 @@
   <p>
     We are established in 2010
   </p>
+  </body>
 </html>
