Added link to login page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <p>
     We are established in 2010
   </p>
+    <h3>
+      To Login and access our couses <a href='login.html'>Click here</a>
+    </h3>
   </body>
 </html>
