--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <title>Sunsoft</title>
   </head>
   <body>
-  <h1>Welcome to Sunsoft Technologies</h1>
+  <h1>Welcome to Sunsoft College</h1>
   <hr>
-  <h3>A Corportae Training company</h3>
+  <h3>Knowledge Hub</h3>
   <hr>
   <p>
-    We are established in 2010
+    We are established in 2015 and cater with the degree courses.
   </p>
     <h3>
       To Login and access our couses <a href='login.html'>Click here</a>
